# to-markdown

./: .cra-fix-prompt.md  .env.example  .gitignore  .mcp.json  BACKLOG.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  README.md  REVIEW.md  ROADMAP.md  fix-manifest.yaml  fix-report.yaml  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
.code-review-agent/: config.json
.code-review-agent/reviews/: review-2026-03-28T21-28-33.md
.github/workflows/: ci.yml
.specflow/: manifest.json  orchestration-state.json
.specify/0040-smart-features/: plan.md  spec.md  tasks.md  testing-instructions.md
.specify/0125-smart-pipeline/: discovery.md  plan.md  spec.md  tasks.md
.specify/discovery/: context.md  decisions.md  state.md
.specify/history/: HISTORY.md
.specify/memory/: coding-standards.md  constitution.md  glossary.md  tech-stack.md  testing-strategy.md
.specify/phases/: 0010-research-tooling.md  0020-core-cli-pipeline.md  0020-core-pipeline.md  0030-format-quality-testing.md  0030-pdf-converter.md  0040-docx-converter.md  0040-smart-features.md  0050-batch-processing.md  0050-pptx-converter.md  0060-xlsx-converter.md  0110-background-processing.md  0120-easy-install.md  0125-smart-pipeline.md  0130-production-readiness.md
.specify/templates/: USAGE-template.md  test-ci.yaml  (+15 more)
tests/: conftest.py  test_batch.py  test_cli.py  test_constants_phase0125.py  test_extraction.py  test_fix_background_batch.py  test_frontmatter.py  test_mcp_server.py  test_mcp_tools.py  test_pipeline.py  test_sanitize.py  test_setup.py  test_tasks.py  test_worker.py
(+129 files in other folders)
